# aivo-learning-saas

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  HETZNER_DEPLOYMENT_GUIDE.md  cspell.json  docker-compose.dev.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
docs/: compliance-checklist.md  (+1 more)
services/ai-svc/: .env.example  Dockerfile  pyproject.toml  requirements.txt
services/ai-svc/curriculum-data/: common-core-ela-k5.json  common-core-math-k5.json
services/ai-svc/src/ai_svc/: __init__.py  config.py  db.py  dependencies.py  feature_flags.py  main.py  nats_client.py  observability.py
services/ai-svc/src/ai_svc/generation/: __init__.py  activity_generator.py  homework_adapter.py  lesson_generator.py  quiz_generator.py  tutor_responder.py  writing_feedback.py
services/ai-svc/src/ai_svc/iep/: __init__.py  extractor.py  parser.py
services/ai-svc/src/ai_svc/llm/: __init__.py  failover.py  gateway.py  prompt_sanitizer.py  tier_router.py  token_tracker.py
services/ai-svc/src/ai_svc/middleware/: __init__.py  auth.py  rate_limit.py  tenant.py
services/ai-svc/src/ai_svc/models/: __init__.py
services/ai-svc/tests/: conftest.py  test_app_and_infra.py  test_gateway.py  test_generation.py  test_homework_adapter.py  test_iep_parser.py  test_infra_extra.py  test_ocr_processor.py  test_problem_parser.py  test_prompt_assembly.py  test_quality_gate.py  test_rag.py  test_rag_embedder.py  test_rag_retriever.py  test_routes.py  test_subject_detector.py  test_vision_ocr.py
services/brain-svc/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
services/brain-svc/alembic/versions/: 001_add_pgvector.py
services/brain-svc/src/brain_svc/: db.py  feature_flags.py  main.py  nats_client.py  observability.py  redis_client.py
services/brain-svc/tests/: conftest.py  test_accommodation.py  test_app_lifecycle.py  test_brain_clone.py  test_brain_state.py  test_data_lifecycle.py  test_infra_clients.py  test_main_brain.py  test_mastery.py  test_middleware.py  test_ml_engine.py  test_publishers.py  test_recommendations.py  test_regression_detector.py  test_routes.py  test_routes_full.py  test_services_extra.py  test_subscribers.py  test_upgrade.py  test_versioning.py
(+1719 files in other folders)
