[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-svc"
version = "0.1.0"
description = "AIVO Learning Platform — AI Generation Service"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.8,<3",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "redis[hiredis]>=5.2,<6",
    "nats-py>=2.9,<3",
    "litellm>=1.40,<2",
    "langfuse>=2.0,<3",
    "pgvector>=0.3,<1",
    "pypdf>=4.0,<6",
    "pyphen>=0.16,<1",
    "httpx>=0.28,<1",
    "cryptography>=43,<45",
    "PyJWT[crypto]>=2.9,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.25,<1",
    "pytest-cov>=6,<7",
    "httpx>=0.28,<1",
    "aiosqlite>=0.20,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["ai_svc"]

[tool.coverage.report]
show_missing = true
fail_under = 95
